# voicebox-asr

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: release.yml
assets/: icon.icns
models/paraformer-zh-small-2024-03-09/: model.int8.onnx
scripts/: package-dist.sh
src/: main.rs
tasks/: lessons.md
