[package]
name = "voicebox-asr"
version = "1.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.38", features = ["derive", "env"] }
hound = "3.5.1"
http = "1.3.1"
serde_json = "1.0.140"
sherpa-onnx = "1.12.38"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
